# cw-pipeline

./: .gitignore  NOTES.md  README.md  build.coffee  bun.lockb  bunfig.toml  env.coffee  package.json  tsconfig.json
assets/tpl/: Cargo.toml  README.md
assets/tpl/_contract/: contract.rs
assets/tpl/contract/: Cargo.toml  README.md
assets/tpl/contract/src/: contract.rs  exec.rs  lib.rs  query.rs
assets/tpl/monorepo/: Cargo.toml
assets/tpl/root/: README.md
assets/tpl/scripts/: schema.rs
src/: address-book.ts  config.ts  cw-pipeline.coffee  drand.ts  index.coffee  ink-utils.tsx  messaging.ts  project.ts  prompting.ts  subprogram.ts  templating.ts  utils.ts
src/blessed/: ConfirmMsgSubProgram.ts
src/cmds/: addr.coffee  build.coffee  config.coffee  create.coffee  deploy.coffee  exec.coffee  find.coffee  index.coffee  init.coffee  instantiate.coffee  migrate.coffee  query.coffee  setup.coffee  show.coffee  state.coffee  store.coffee  test.coffee  whoami.coffee
src/cmds/util/: index.coffee  mint.coffee
src/ink/: InquireInitMsgProgram.tsx  MintCw721Program.tsx
