# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "{{contract-name}}"
{{package-info}}
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
{{project-deps}}

[dev-dependencies]
cw-multi-test = "0.17"
